--- a/src/app/view_components/offer-list/offer-list.component.html
+++ b/src/app/view_components/offer-list/offer-list.component.html
@@ -7,7 +7,7 @@ width: calc(100% - 20px);">
   </div>
 
 
-  <div class="mat-spinner"  *ngIf="loading_state" [ngClass]="{'bottom': offers.length !== 0 }">
+  <div class="mat-spinner"  *ngIf="loading_state" [ngClass]="{'bottom': this.offers !== [] }">
     <mat-spinner></mat-spinner>
   </div>
 
