--- a/src/app/subcomponents/newPost/new-post-panel/new-post-panel.component.html
+++ b/src/app/subcomponents/newPost/new-post-panel/new-post-panel.component.html
@@ -1,60 +1,60 @@
-<mat-card>
-  <div class="Image">
-    <img src="https://source.unsplash.com/1600x900/?product">
-  </div>
-  <form class="createPost">
-    <h1 style="margin: 0">
-      What's on your mind?
-    </h1>
-    <section class="header">
-      <h3 *ngIf="!newPost.type || !newPost.subject">Choose post type</h3>
+<div class="Image">
+  <img src="https://source.unsplash.com/1600x900/?product">
+</div>
+<form class="createPost">
+  <h1 style="margin: 0">
+    What's on your mind?
+  </h1>
+  <section class="header">
+    <h3 *ngIf="!newPost.type || !newPost.subject">Choose post type</h3>
 
-      <mat-form-field appearance="standard" [floatLabel]="floatLabelControl.value">
-        <mat-label>Post type</mat-label>
-        <mat-select [(value)]="newPost.subject" (selectionChange)="fetchSelectedType()">
-          <mat-option>None</mat-option>
-          <mat-option *ngFor="let subj of posttypes['types']" value="{{subj}}">
-            {{subj}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field appearance="standard" [floatLabel]="floatLabelControl.value">
-        <mat-label>Subject</mat-label>
-        <mat-select [(value)]="newPost.type" (selectionChange)="fetchSelectedType()">
-          <mat-option>None</mat-option>
-          <mat-option *ngFor="let type of posttypes['subjects'][newPost.subject]" value="{{type}}">
-            {{type}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </section>
-    <section class="newPost" *ngIf="newPost.type && newPost.subject" @developDown>
-      <h3>Write your post</h3>
-      <new-job-offer
-        *ngIf="newPost.subject == 'Offer' && ['Job', 'Internship'].includes(newPost.type)"
-        [newPost]="newPost"
-        [type]="newPost.type"
-      >
-      </new-job-offer>
-      <new-job-demand
-        *ngIf="newPost.subject == 'Demand' && ['Job', 'Internship'].includes(newPost.type)"
-        [newPost]="newPost"
-        [type]="newPost.type"
-      >
-      </new-job-demand>
+    <mat-form-field appearance="standard" [floatLabel]="floatLabelControl.value">
+      <mat-label>Post type</mat-label>
+      <mat-select [(value)]="newPost.type" (selectionChange)="fetchSelectedType(newPost.type, newPost.subject)">
+        <mat-option>None</mat-option>
+        <mat-option *ngFor="let subj of posttypes['types']" value="{{subj}}">
+          {{subj}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="standard" [floatLabel]="floatLabelControl.value">
+      <mat-label>Subject</mat-label>
+      <mat-select [(value)]="newPost.subject" (selectionChange)="fetchSelectedType(newPost.type, newPost.subject)">
+        <mat-option>None</mat-option>
+        <mat-option *ngFor="let type of posttypes['subjects'][newPost.type]" value="{{type}}">
+          {{type}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </section>
+  <section class="newPost" *ngIf="newPost.type && newPost.subject" @developDown>
+    <h3>Write your post</h3>
+    <new-job-offer
+      *ngIf="newPost.type.toLowerCase() == 'offer' && ['Job', 'Internship'].includes(newPost.subject)"
+      [newPost]="newPost"
+      [subject]="newPost.subject"
+      (doneEvent)="doneEvent.emit($event)"
+    >
+    </new-job-offer>
+    <new-job-demand
+      *ngIf="newPost.type.toLowerCase() == 'demand' && ['Job', 'Internship'].includes(newPost.subject)"
+      [newPost]="newPost"
+      [subject]="newPost.subject"
+      (doneEvent)="doneEvent.emit($event)"
+    >
+    </new-job-demand>
 
-    </section>
-    <input type="file" hidden #imageFile (change)="this.fileSelect($event)">
-    <mat-card-actions>
-      <!-- <button mat-button (click)="this.createPost()">
-        Post
-      </button> -->
-      <button mat-icon-button aria-label="Add image" (click)="imageFile.click()">
-        <mat-icon>add_photo_alternate</mat-icon>
-      </button>
-      <button mat-icon-button aria-label="Schedule">
-        <mat-icon>schedule</mat-icon>
-      </button>
-    </mat-card-actions>
-  </form>
-</mat-card>
+  </section>
+  <input type="file" hidden #imageFile (change)="this.fileSelect($event)">
+  <mat-card-actions>
+    <!-- <button mat-button (click)="this.createPost()">
+      Post
+    </button> -->
+    <button mat-icon-button aria-label="Add image" (click)="imageFile.click()">
+      <mat-icon>add_photo_alternate</mat-icon>
+    </button>
+    <button mat-icon-button aria-label="Schedule">
+      <mat-icon>schedule</mat-icon>
+    </button>
+  </mat-card-actions>
+</form>
