--- a/src/app/subcomponents/post/post.component.html
+++ b/src/app/subcomponents/post/post.component.html
@@ -76,9 +76,9 @@
 
 <mat-card class="example-card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image" [style]=" 'background-image: url(' + post.owner.imageUrl.toString() + ');' "></div>
+    <div *ngIf="post.owner.imageUrl" mat-card-avatar class="example-header-image" [style]=" 'background-image: url(' + post.owner.imageUrl.toString() + ');' "></div>
     <div class="title">
-      <mat-card-title>{{ post.owner.email || post.ownerId }}</mat-card-title>
+      <mat-card-title>{{ post.owner.email || post.owner.id }}</mat-card-title>
       <mat-card-subtitle>{{ post.timestamp }}</mat-card-subtitle>
     </div>
 
@@ -92,7 +92,7 @@
         <span>Edit post</span>
       </button>
 
-      <button mat-menu-item disabled (click)="deletePost()">
+      <button mat-menu-item (click)="deletePost()">
         <mat-icon>delete</mat-icon>
         <span>Delete post</span>
       </button>
