--- a/src/app/notifications-list/notifications-list.component.html
+++ b/src/app/notifications-list/notifications-list.component.html
@@ -1,22 +1,41 @@
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-    <button mat-icon-button disabled></button>
-    <span>
-      {{node.item}}
+
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding [disabled]="!node.state" [ngClass]="{'enabled': node.state}">
+    <span class="n_content">
+      <h3>{{node.title}}</h3>
+      <h6>{{node.timestamp}}</h6>
     </span>
-  </mat-tree-node>
-  <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
-    <button mat-icon-button
-            [attr.aria-label]="'toggle ' + node.filename" matTreeNodeToggle>
-      <mat-icon class="mat-icon-rtl-mirror">
-        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-      </mat-icon>
+    <button mat-icon-button [disabled]="!node.state" [color]="'primary'" (click)="markAsRead(node)">
+      <mat-icon>done</mat-icon>
     </button>
-    <span
-     matBadge="{{ database.dataMap.get(node.item).length == 0 ? '' : database.dataMap.get(node.item).length }}"
-     matBadgeOverlap="false">
-      {{node.item}}
-    </span>
+  </mat-tree-node>
+
+  <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
+    <div *ngIf="database.dataMap.get(node.title) && database.dataMap.get(node.title).length > 0">
+      <button mat-icon-button
+      *ngIf="database.dataMap.get(node.title).length > 0"
+              [attr.aria-label]="'toggle ' + node.filename" matTreeNodeToggle>
+        <mat-icon class="mat-icon-rtl-mirror">
+          {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+        </mat-icon>
+      </button>
+      <span
+      matBadge="{{ database.dataMap.get(node.title).length }}"
+      matBadgePosition="after"
+      matBadgeOverlap="false"
+      class="n_category"
+      >
+        <b>
+          {{node.title}}
+        </b>
+        <button mat-icon-button>
+          <mat-icon class="mat-icon-rtl-mirror">
+            done_all
+          </mat-icon>
+        </button>
+      </span>
+    </div>
+
     <mat-progress-bar *ngIf="node.isLoading"
                       mode="indeterminate"
                       class="example-tree-progress-bar"></mat-progress-bar>
