--- a/src/app/minicomponents/connection-panel/connection-panel.component.css
+++ b/src/app/minicomponents/connection-panel/connection-panel.component.css
@@ -32,7 +32,7 @@ div.logo svg, div.logo .svg{
   border-radius: 3vmax;
 
   background-blend-mode: overlay;
-  background-image: linear-gradient(40deg, var(--primary-color-light), var(--secondary-color-light), var(--primary-color-light));
+  background-image: linear-gradient(50deg, var(--primary-color), var(--secondary-color), var(--primary-color-light));
   background-size: 250%;
   background-position-x: 0%;
 }
