Added follower tab in user's page

--- a/src/app/view_components/user-profile/user-profile.component.html
+++ b/src/app/view_components/user-profile/user-profile.component.html
@@ -40,9 +40,8 @@
         </div>
       </mat-tab>
       <mat-tab label="Followers">
-        <post-filter #companyfilter></post-filter>
-        <div *ngFor="let company of usercompanies" style="display: contents;">
-          <company-details *ngIf="this.companyfilter.doSatisfy(company)" @develop [company]="company" [showMap]="false"></company-details>
+        <div *ngFor="let follower of user.following" style="display: contents;">
+          <user-details [user]="follower"></user-details>
         </div>
       </mat-tab>
       <!-- <mat-tab label="Third"> Content 3 </mat-tab> -->
