--- a/src/app/minicomponents/badge/badge.component.html
+++ b/src/app/minicomponents/badge/badge.component.html
@@ -1,11 +1,5 @@
-<!-- <badge [attr.category]=" badge.category" [attr.name]="badge.name" [attr.activate]="activate" [attr.expand]="expand" (click)="toggleButton()">
-  <div>
-    <mat-icon aria-hidden="false" aria-label="{{ badge.name }}">{{ icon }}</mat-icon>
-  <span>{{ badge.name }}</span>
-
-  </div>
-</badge> -->
 <mat-chip
+  @developDown
   matBadge="{{ badge.value }}"
   matBadgePosition="above after"
   matBadgeColor="{{ this.color }}"
