--- a/src/app/view_components/register/register.component.css
+++ b/src/app/view_components/register/register.component.css
@@ -60,25 +60,13 @@ div.layout div.col2.header>i{
 div.layout div.col2.header:hover>i{
   color: #fff;
 }
-div.layout input{
-    font-size: calc(20pt - 1.5vmin)!important;
+div.layout mat-form-field{
     margin: 3%;
     padding: 2vmin;
-    text-align: center;
-    outline: none;
-    border-radius: 10pt;
-    background-color: white;
-    border: .1vmin solid white;
-    color: var(--primary-color)!important;
     flex: 1 0 20%;
-    transition: all .2s ease-out;
+
 }
-div.layout input:focus{
-    border:  .5vmin solid var(--primary-color);
-    padding: 1.6vmin;
-    color: var(--primary-color)!important;
-    background-color: white;
-}
+
 
 div.mat-card-actions{
   display: flex;
@@ -122,7 +110,7 @@ div.mat-card-actions + a, div.mat-card-actions + a:visited {
   div.container{
     z-index: 4;
   }
-  div.layout input{
+  div.layout mat-form-field{
     margin: 1%;
     width: 0%;
     flex: 1 0 40%;
