--- a/src/app/view_components/register/register.component.html
+++ b/src/app/view_components/register/register.component.html
@@ -10,12 +10,31 @@
          class="material-icons">image</i>
       </div>
       <div class="col2">
-        <input mat-input required type="text" name="first_name" (change)="updateField($event)" placeholder="First Name"/>
-        <input mat-input required type="text" name="last_name" (change)="updateField($event)" placeholder="Last Name"/>
-        <input mat-input required type="email" name="email" (change)="updateField($event)" placeholder="Email"/>
-        <input mat-input required type="email" name="email" placeholder="Confirm Email"/>
-        <input mat-input required type="password" name="password" (change)="updateField($event)" placeholder="Password"/>
-        <input mat-input required type="password" name="password" placeholder="Confirm Password"/>
+        <mat-form-field>
+          <mat-label>First name</mat-label>
+          <input matInput required type="text" name="first_name" (change)="updateField($event)" placeholder="First Name"/>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Last name</mat-label>
+          <input matInput required type="text" name="last_name" (change)="updateField($event)" placeholder="Last Name"/>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Email</mat-label>
+          <input matInput required type="email" name="email" (change)="updateField($event)" placeholder="Email"/>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Confirm Email</mat-label>
+          <input matInput required type="email" name="email" placeholder="Confirm Email"/>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Password</mat-label>
+          <input matInput required type="password" name="password" (change)="updateField($event)" placeholder="Password"/>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Confirm password</mat-label>
+          <input matInput required type="password" name="password" placeholder="Confirm Password"/>
+        </mat-form-field>
+
         <div style="display: flex; flex-grow: 1; align-items: center;">
           <div class="mat-card-actions">
             <button mat-button (click)="this.registerUser($event)">Inscription</button>
