Create company feature

--- a/src/app/view_components/company-list/company-list.component.html
+++ b/src/app/view_components/company-list/company-list.component.html
@@ -12,3 +12,6 @@ width: calc(100% - 20px);">
   </div>
 
 </div>
+<button mat-fab class="bottom" color="'primary'" (click)="createCompany()" matTooltip="Create company">
+  <mat-icon>add</mat-icon>
+</button>
