--- a/src/app/view_components/company-list/company-list.component.css
+++ b/src/app/view_components/company-list/company-list.component.css
@@ -6,7 +6,12 @@ company-details {
   flex: 1 0 98%;
   margin: .5vw;
 }
-
+button.bottom {
+  position: fixed;
+  bottom: 6vmin;
+  right: 6vmin;
+  z-index: 4;
+}
 @media only screen and (min-width: 768px) and (orientation: landscape){
   company-details {
     flex-basis: 48.9%;
