Finished company CRUD

--- a/src/app/subcomponents/company-thumbnail/company-thumbnail.component.css
+++ b/src/app/subcomponents/company-thumbnail/company-thumbnail.component.css
@@ -6,7 +6,9 @@ mat-card{
     color: var(--secondary-color);
     width: 100%;
 }
-
+mat-card-title{
+  display: flex;
+}
 .mat-card-header {
     display: block;
     flex-direction: row;
